--- a/docs/dbd-synopsis/dbd-synopsis.tex
+++ b/docs/dbd-synopsis/dbd-synopsis.tex
@@ -287,9 +287,10 @@ Use Postman or k6 to compare latency changes with and without cache hits.
     \item Concurrent writes from 100+ users achieve a success rate of over 99\%, with no data loss or corruption.
 \end{itemize}
 
-\subsection{Description}
+\section{Analysis \& Results}
 
-\subsection{Analysis of Achievements}
+\subSection{Read-Write Performance Comparison}
+\paragraph{} 
 
 \section{Conclusion}
 
