--- a/docs/sys-synopsis/sys-synopsis.tex
+++ b/docs/sys-synopsis/sys-synopsis.tex
@@ -17,10 +17,9 @@
 
 %%%%%%%%%%% Title and Author %%%%%%%%%%%
 
-\title{Communication Technologies}
+\title{Communication Technologies: Multiple Access Techniques and Protocols Study}
 \author{Fei Gu}
 \date{\today}
-
 
 %%%%%%%%%%% Document %%%%%%%%%%%
 \begin{document}
@@ -29,7 +28,6 @@
 
 %%%%%%%%%%%% Introduction %%%%%%%%%%%
 \section{Introduction}
-
 \paragraph{} 
 
 %%%%%%%%%%%%% Problem Statement %%%%%%%%%%%
