oh that change too much

--- a/docs/dbd-synopsis/dbd-synopsis.tex
+++ b/docs/dbd-synopsis/dbd-synopsis.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{geometry}
+\usepackage{graphicx}
 \usepackage{hyperref}
 \geometry{a4paper, margin=1in}
 
@@ -14,6 +15,7 @@
 	breaklines=true,
 	columns=fullflexible
 }
+\usepackage{hyperref}
 
 %%%%%%%%%%% Title and Author %%%%%%%%%%%
 
@@ -26,6 +28,7 @@
 \begin{document}
 
 \maketitle
+\href{https://github.com/feix0033/easv.pbsw.dbd-sys.synopsis}{Github-Repository: feix0033/easv.pbsw.dbd-sys.synopsis}
 
 %%%%%%%%%%%% Introduction %%%%%%%%%%%
 \section{Introduction}
@@ -289,8 +292,15 @@ Use Postman or k6 to compare latency changes with and without cache hits.
 
 \section{Analysis \& Results}
 
-\subSection{Read-Write Performance Comparison}
-\paragraph{} 
+\subsection{Read-Write Performance Comparison}
+
+
+
+\subsection{Diverse Metadata Structure Support}
+
+\subsection{High Concurrency Write Performance}
+
+\subsection{Cache Hit Rate and Query Efficiency Improvement}
 
 \section{Conclusion}
 
